# bai-autotest

./: LICENSE  README.md  cursor-settings-snippet.json  mcp.json  pyproject.toml  requirements.txt  setup.py
docs/: claude-mcp-setup.md  cursor-setup.md  mcp-usage-guide.md
examples/: auth_flow.md  custom_template.yaml  login-flow.md  login-scenario-filled.md
examples/generated_tests/: test_general_login.cy.js  test_general_login.py
src/bai_autotest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bai_test_mcp/: __init__.py  cli.py
src/bai_test_mcp/generators/: __init__.py  base.py  custom.py  cypress.py  jest_rtl.py  playwright.py  pytest.py  template_loader.py
src/bai_test_mcp/generators/templates/: java_junit.yaml  java_spring.yaml  react_testing_library.yaml
src/bai_test_mcp/mcp/: __init__.py  client.py  server.py
src/bai_test_mcp/parsers/: __init__.py  base.py  mermaid.py
templates/: test-scenario-template.md
