[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bai-autotest"
version = "0.1.0"
description = "MCP-based test automation for diagram-driven testing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "bettehub", email = "bettehub@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=0.1.0",
    "pytest>=7.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "click>=8.0.0",
    "lark>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.scripts]
bai-autotest = "bai_test_mcp.cli:main"

[project.urls]
"Homepage" = "https://github.com/bettehub/bai-autotest"
"Bug Tracker" = "https://github.com/bettehub/bai-autotest/issues"
"Documentation" = "https://github.com/bettehub/bai-autotest/wiki"

[tool.setuptools]
package-dir = {""= "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"